kubernetes/base/adminer.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: adminer
    tier: mysql
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  selector:
    matchLabels:
      app: adminer
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adminer
        tier: mysql
    spec:
      containers:
      - image: adminer
        name: adminer
        ports:
        - containerPort: 8080
          name: adminer
        resources:
          requests:
            memory: 64Mi
            cpu: 10m
          limits:
            memory: 64Mi
            cpu: 50m
