kubernetes/base/api-budgeting.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeting
  labels:
    app: budgeting
spec:
  ports:
    - port: 80
  selector:
    app: budgeting
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgeting
  labels:
    app: budgeting
spec:
  selector:
    matchLabels:
      app: budgeting
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: budgeting
        tier: backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: ghcr.io/drifterapps/holefeeder/holefeeder-budgeting-api
        name: budgeting
        ports:
        - containerPort: 80
          name: budgeting
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 250m
