kubernetes/base/api.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - port: 80
  selector:
    app: api
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
        tier: backend
    spec:
      containers:
      - image: holefeeder/holefeeder-api
        name: api
        ports:
        - containerPort: 80
          name: api
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 150m
