kubernetes/base/budgeting.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budgeting
  labels:
    app: budgeting
spec:
  ports:
    - port: 80
  selector:
    app: budgeting
    tier: backend
  type: ClusterIP
