kubernetes/base/gateway.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
    - port: 80
  selector:
    app: gateway
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  selector:
    matchLabels:
      app: gateway
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gateway
        tier: backend
    spec:
      containers:
      - image: holefeeder/holefeeder-gateway-web
        name: gateway
        ports:
        - containerPort: 80
          name: gateway
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
