kubernetes/base/gateway.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  ports:
    - port: 80
  selector:
    app: gateway
    tier: backend
  type: NodePort
