kubernetes/base/mysql.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: holefeeder
  labels:
    app: mysql
spec:
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: holefeeder
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mariadb:10.5.13
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 500Mi
              cpu: 500m
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-credentials-volume
              mountPath: /etc/mysql/credentials
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-scripts
            defaultMode: 0777
        - name: mysql-credentials-volume
          secret:
            secretName: holefeeder-secrets
