kubernetes/base/object-store.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-store
  labels:
    app: object-store
spec:
  ports:
    - port: 80
  selector:
    app: object-store
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-store
  labels:
    app: object-store
spec:
  selector:
    matchLabels:
      app: object-store
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: object-store
        tier: backend
    spec:
      containers:
      - image: holefeeder/holefeeder-object-store-api
        name: object-store
        ports:
        - containerPort: 80
          name: object-store
        resources:
          requests:
            memory: 32Mi
            cpu: 10m
          limits:
            memory: 64Mi
            cpu: 50m
