kubernetes/base/object-store.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-store
  labels:
    app: object-store
spec:
  ports:
    - port: 80
  selector:
    app: object-store
    tier: backend
  type: ClusterIP
