kubernetes/base/ui.deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  ports:
    - port: 80
  selector:
    app: ui
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    matchLabels:
      app: ui
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui
        tier: frontend
    spec:
      containers:
      - image: holefeeder/holefeeder-web
        name: ui
        ports:
        - containerPort: 80
          name: ui
        resources:
          requests:
            memory: 32Mi
            cpu: 50m
          limits:
            memory: 32Mi
            cpu: 50m
        volumeMounts:
        - name: templates
          mountPath: /etc/nginx/templates
      volumes:
      - name: templates
        configMap:
          name: ui-config
