kubernetes/base/ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  ports:
    - port: 80
  selector:
    app: ui
    tier: frontend
  type: NodePort
