kubernetes/base/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: ui
spec:
  ports:
    - port: 80
  selector:
    app: ui
    tier: ui
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  selector:
    matchLabels:
      app: ui
      tier: ui
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ui
        tier: ui
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: ghcr.io/drifterapps/holefeeder/holefeeder-web
        name: ui
        ports:
        - containerPort: 80
          name: ui
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 250m
        volumeMounts:
        - name: templates
          mountPath: /etc/nginx/templates
      volumes:
      - name: templates
        configMap:
          name: ui-config
