kubernetes/base/web-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: holefeeder
spec:
  ports:
    - port: 80
  selector:
    app: holefeeder
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: holefeeder
spec:
  selector:
    matchLabels:
      app: holefeeder
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: holefeeder
        tier: backend
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: ghcr.io/drifterapps/holefeeder/holefeeder-gateway-web
        name: gateway
        ports:
        - containerPort: 80
          name: gateway
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 250m
        volumeMounts:
        - name: ocelot-volume
          mountPath: /app/ocelot.json
          subPath: ocelot.json
      volumes:
      - name: ocelot-volume
        configMap:
          name: ocelot-config
