kubernetes/base/ingress.deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: holefeeder
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
    - host: holefeeder.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ui
                port:
                  number: 80
    - host: adminer.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adminer
                port:
                  number: 80
    - host: mysql.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mysql
                port:
                  number: 30306
  tls:
    - hosts:
        - holefeeder.localhost
        - adminer.localhost
        - mysql.localhost
      secretName: holefeeder-tls
