kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: holefeeder.test
      http:
        paths:
          - pathType: Prefix
            path: /budgeting/(/|$)(.*)
            backend:
              service:
                name: budgeting
                port:
                  number: 80
          - pathType: Prefix
            path: /object-store/(/|$)(.*)
            backend:
              service:
                name: object-store
                port:
                  number: 80
  tls: 
  - hosts: 
    - test-app.com 
    secretName: test-app-cert-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: holefeeder.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ui
                port:
                  number: 80
  tls: 
  - hosts: 
    - test-app.com 
    secretName: test-app-cert-tls
