kubernetes/base/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: holefeeder.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: ui
                port:
                  number: 80
  tls: 
  - hosts: 
    - test-app.com 
    secretName: holefeeder-ui-tls
